fix: overflow, btn pointers, in css

--- a/AreaOfTringle/ariatriangle.css
+++ b/AreaOfTringle/ariatriangle.css
@@ -7,6 +7,7 @@
 body {
   text-align: center;
   background-color: lightgray;
+  overflow: hidden;
 }
 
 .head {
@@ -52,6 +53,7 @@ nav {
   background-color: turquoise;
   padding: 0.5rem;
   border: 0;
+  cursor: pointer;
 }
 #calculate:hover {
   background-color: #3e8e41;
