--- a/Hypotenuse/hypotenuse.css
+++ b/Hypotenuse/hypotenuse.css
@@ -7,6 +7,7 @@
 body {
   text-align: center;
   background-color: lightgray;
+  overflow: hidden;
 }
 
 .head {
